# neuRAWns_mmdet

./: .gitignore  Experiments_neuRAWns.xlsx  conv_visual.html  debug_pipeline.py  debug_preds_vs_gt.txt  myfiles.txt  pyproject.toml  requirements.txt  setup.py  setup_env.sh  slurm-10875.out  temp.ipynb  test.sh
_utils/: load_raw_img.py
checkpoint_inspection/: detector_layer.txt  detector_layer1.txt  output.txt
cluster_scripts/: _utils_cluster.sh  _utils_cluster.txt  exp001.sh  exp002.sh  exp11.sh  exp11_test.sh  exp12.sh  exp12_sbatch.sh  exp13.sh  exp13_sbatch.sh  exp14.sh  exp14_sbatch.sh  exp15.sh  exp15_test.sh  exp16.sh  exp17.sh  exp17_test.sh  exp18.sh  exp19.sh  exp20.sh  exp21.sh  exp22.sh  exp23.sh  exp24.sh  exp25.sh
configs/: exp003.py  exp005.py
datasets/: __init__.py
debug_scripts/: check_config.py  debug_gt_labels.py  exp004_deb.py  exp004_fixed.py  test12_full_detection_test.py  verify_freezing.py  visualise_detections.py  visualise_fixed_isp.py  visualise_rawmod_output.py
inference_results/: script1_srgb_inference.py  script2_raw_fixed_preproc.py  script3_raw_exp11_preproc.py
modules/: __init__.py  exp002_learnable_isp_v1.py  multidetector_wrapper.py
raw_preprocessing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tom_6_11/: plot_model_output.py  plot_output_gemini.py
tools/: measure_preprocessor.py  parity_check.py  sanity_check.py
z_archive/: test.py  test10.py  test11.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
z_env_replicate/: environment.yml  setup.sh
z_utils/: ROD_isp.py  cluster.sh
(+285 files in other folders)
